Clean code in powsybl-metrix-integration module (#236)
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>