@@ -165,7 +165,7 @@ public class FileSystemTimeSeriesStore implements ReadOnlyTimeSeriesStore {
                 .toList();
             return switch (timeSeries.size()) {
                 case 0 -> Optional.empty();
-                case 1 -> Optional.of(timeSeries.get(0));
+                case 1 -> Optional.of(timeSeries.getFirst());
                 default -> throw new PowsyblException("Found more than one timeseries");
             };
         }
@@ -224,7 +224,7 @@ public class FileSystemTimeSeriesStore implements ReadOnlyTimeSeriesStore {
                 if (existingTsList.size() != 1) {
                     throw new PowsyblException("Existing ts file should contain one and only one ts");
                 }
-                TimeSeries existingTs = existingTsList.get(0);
+                TimeSeries existingTs = existingTsList.getFirst();
 
                 // You cannot append to an infinite TimeSeries
                 if (InfiniteTimeSeriesIndex.INSTANCE.getType().equals(existingTs.getMetadata().getIndex().getType())
@@ -462,7 +462,7 @@ public class FileSystemTimeSeriesStore implements ReadOnlyTimeSeriesStore {
                 .map(TimeSeries::parseJson)
                 .map(tsList -> {
                     if (tsList.size() == 1) {
-                        return tsList.get(0).getMetadata();
+                        return tsList.getFirst().getMetadata();
                     }
                     throw new PowsyblException("Invalid timeseries resource count");
                 })
